# example-vue-rust-fetch

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  vue.config.js
public/: index.html
src/: App.vue
src/components/: Fetch.vue
src/libs/: lib.rs
