[package]
name = "example-vue-rust-fetch"
version = "0.1.0"
authors = ["Gerard Muñoz <gmunoz1979@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/libs/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
js-sys = "0.3.28"
wasm-bindgen-futures = "0.4.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "1.0.101"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.28"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window'
]